# all

./: .coverage  .gitignore  .pre-commit-config.yaml  .ruff.toml  ANIMICA_CLI_SUMMARY.md  CONTRIBUTING.md  MARKETPLACE_DEPLOYMENT.md  MARKETPLACE_FILE_MANIFEST.md  MARKETPLACE_QUICK_REFERENCE.md  MARKETPLACE_SUMMARY.md  Makefile  animica_dump_index_20251124_223900.txt  conftest.py  docker-compose.dev.yml  dump.sh  dump2.sh  dump3.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  requirements.txt  setup.sh  testall.sh
chains/bindings/python/: pyproject.toml
contracts/: .env.example  .gitignore  .ruff.toml  CODESTYLE.md  Makefile  README.md  SECURITY.md  mypy.ini  pyproject.toml  requirements.txt
contracts/docs/: ARCHITECTURE.md  CAPABILITIES.md  INVARIANTS.md  PATTERNS.md  TUTORIAL_ai_agent.md  TUTORIAL_token.md
contracts/examples/ai_agent/: README.md  contract.py  deploy_and_test.py  manifest.json  tests_local.py
contracts/examples/escrow/: README.md  contract.py  deploy_and_test.py  manifest.json  tests_local.py
contracts/examples/multisig/: README.md  contract.py  deploy_and_test.py  manifest.json  tests_local.py
contracts/examples/oracle/: README.md  contract.py  deploy_and_test.py  manifest.json  tests_local.py
contracts/examples/quantum/: quantum_jobs_contract.py  quantum_workers_contract.py
contracts/examples/quantum_rng/: README.md  contract.py  deploy_and_test.py  manifest.json  tests_local.py
contracts/examples/registry/: README.md  contract.py  deploy_and_test.py  manifest.json  tests_local.py
contracts/examples/token/: README.md  contract.py  deploy_and_test.py  manifest.json  tests_local.py
contracts/examples/treasury/: contract.py  deploy_and_test.py  manifest.json
contracts/fixtures/: README.md
contracts/fixtures/abi/: ai_agent.json  escrow.json  quantum_rng.json  registry.json  token20.json
contracts/fixtures/manifests/: ai_agent.json  escrow.json  quantum_rng.json  registry.json  token.json
contracts/fixtures/vectors/: ai_agent_roundtrip.json  escrow_flows.json  quantum_mix.json  token_transfers.json
contracts/interfaces/: __init__.py  iai_compute.json  iescrow.json  iquantum.json  irandom_beacon.json  iregistry.json  itoken20.json  izkverify.json
contracts/schemas/: abi.schema.json  manifest.schema.json
contracts/stdlib/: README.md  __init__.py  pq_verify.py
contracts/stdlib/access/: __init__.py  ownable.py  roles.py
contracts/stdlib/capabilities/: __init__.py  ai_compute.py  da_blob.py  quantum.py  randomness.py  (+1 more)
contracts/templates/: README.md
contracts/tests/: __init__.py  conftest.py  test_ai_agent_flow.py  test_da_oracle.py  test_escrow_stdlib.py  test_multisig.py  test_quantum_rng_mix.py  test_registry.py  test_token_stdlib.py  test_upgrade_proxy_pinned.py
contracts/tools/: README.md  __init__.py  abi_gen.py  build_package.py  call.py  deploy.py  fixtures.py  lint_contract.py  verify.py
native/: Cargo.toml  LICENSE-THIRD-PARTY.md  Makefile  README.md  build.rs  pyproject.toml  rust-toolchain.toml
native/.cargo/: config.toml
native/benches/: hash_bench.rs  nmt_bench.rs  rs_bench.rs
native/docs/: ARCHITECTURE.md  BINDINGS.md  PERFORMANCE.md  da_parameters.md
native/examples/: hash_demo.rs  nmt_demo.rs  rs_demo.rs
native/ffi/: README.md
native/include/: animica_native.h
native/pq_precompile/: Cargo.toml  bench_parser.py
native/src/: error.rs  lib.rs
native/tests/: common.rs  cpu_feature_selection.rs  erasure_roundtrip.rs  hash_cross_impl_consistency.rs  hash_roundtrip.rs  hash_tests.rs  nmt_multi_namespace.rs  nmt_range_proofs.rs  nmt_single_namespace.rs  nmt_tests.rs  python_binding_smoke.rs  rs_encode_recover.rs  rs_invalid_recovery.rs  rs_layout_invariants.rs  rs_tests.rs
native/tests_py/: __init__.py  test_hash.py  test_nmt.py  test_rs.py
python/: README.md  pyproject.toml
python/animica/: __init__.py  config.py  wallet_cli.py
python/animica.egg-info/: SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
python/respx/: __init__.py
python/tests/: conftest.py  test_wallet_cli.py
python/typer/: __init__.py  testing.py
sdk/codegen/: Cargo.toml  README.md  cli.py  package.json  tsconfig.json
sdk/python/: README.md  pyproject.toml
sdk/rust/: Cargo.toml  README.md  build.rs
studio-services/: .env.example  Dockerfile  LICENCE-THIRD-PARTY.md  Makefile  README.md  pyproject.toml  requirements.txt
studio-services/fixtures/: README.md  artifact_abi.json
studio-services/scripts/: dev_run.sh  gen_api_key.py  load_fixtures.py  migrate.sh
studio-services/studio_services/: __init__.py  app.py  cli.py  config.py  errors.py  logging.py  main.py  metrics.py  version.py
studio-services/tests/: __init__.py  conftest.py  test_artifacts_put_get.py  test_deploy_relay.py  test_faucet_rate_limit.py  test_health.py  test_openapi_schema.py  test_preflight_simulate.py  test_rate_limit_and_cors.py  test_task_queue_transactions.py  test_verify_source.py
zk/: .env.example  .gitignore  LICENSE-THIRD-PARTY.md  Makefile  README.md  ROADMAP.md  pyproject.toml  requirements.txt
zk/adapters/: __init__.py  omni_bridge.py  plonkjs_loader.py  snarkjs_loader.py  stark_loader.py
zk/bench/: README.md  verify_speed.py
zk/circuits/: README.md
zk/docs/: ARCHITECTURE.md  FORMATS.md  HOWTO_add_circuit.md  PERFORMANCE.md  REPRODUCIBILITY.md  SECURITY.md  ZKML.md
zk/integration/: __init__.py  omni_hooks.py  policy.py  types.py
zk/native/: Cargo.toml  build.rs  pyproject.toml
zk/node/: package.json  snarkjs.config.js
zk/registry/: __init__.py  list_circuits.py  registry.yaml  update_vk.py  vk_cache.json
zk/scripts/: build_circom.sh  convert_snarkjs_to_animica.py  fetch_circom_artifacts.py  generate_vectors.py  hash_artifacts.py
zk/tests/: __init__.py  test_envelope_roundtrip.py  test_groth16_embedding_verify.py  test_plonk_poseidon_verify.py  test_stark_merkle_verify.py  test_vk_cache.py
zk/verifiers/: __init__.py  field.py  groth16_bn254.py  kzg_bn254.py  merkle.py  pairing_bn254.py  plonk_kzg_bn254.py  poseidon.py  serialization.py  stark_fri.py  transcript_fs.py  verify_api.py
(+3180 files in other folders)
