[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project]
name = "animica"
version = "0.1.0"
description = "Animica Python toolbox."
readme = "README.md"
authors = [{ name = "Animica contributors" }]
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12.3",
  "httpx>=0.27.0",
  "respx>=0.21.0",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: Other/Proprietary License",
  "Operating System :: OS Independent",
]

[project.scripts]
animica-wallet = "animica.cli.wallet:app"
animica-node = "animica.cli.node:app"
animica-mining = "animica.cli.mining:app"
animica-pool = "animica.cli.mining:app"
animica-p2p = "p2p.cli:main"

[project.optional-dependencies]
stratum = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
]
dev = [
  "pytest>=7.0",
]

[tool.setuptools]
package-dir = {"" = ".."}

[tool.setuptools.packages.find]
where = [".."]
include = ["animica*", "p2p*"]
