[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "studio-services"
version = "0.1.0"
description = "FastAPI microservice for Animica Studio: deploy relay, source verification, simulation, and artifact hosting (no server-side signing)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Animica Contributors" }
]
keywords = ["animica", "fastapi", "json-rpc", "cbor", "web3", "verification", "devtools"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Framework :: FastAPI",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Build Tools",
]

# Runtime deps. Versions are intentionally flexible here; requirements.txt pins exacts.
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "httpx>=0.27",
  "msgspec>=0.18",          # high-performance codecs (JSON/MessagePack); used extensively
  "cbor2>=5.6",             # CBOR payload handling for signed tx/artifacts when needed
  "python-dotenv>=1.0",     # load .env in local/dev
  "structlog>=24.1",        # structured JSON logging
  "prometheus-client>=0.20" # /metrics exporter
]

[project.optional-dependencies]
dev = [
  "pytest>=8.1",
  "pytest-asyncio>=0.23",
  "anyio>=4.3",
  "respx>=0.21",      # httpx mocking
  "ruff>=0.5",        # lint
  "black>=24.8",
  "mypy>=1.10",
  "types-python-dateutil>=2.9.0.20240906"
]

[project.scripts]
# Uvicorn launcher (see studio_services/main.py)
studio-services = "studio_services.main:main"
# Admin/ops CLI (DB migrate, create API keys, backfill/gc, etc.)
studio-services-cli = "studio_services.cli:main"

[project.urls]
Homepage = "https://github.com/animica-labs/animica"
Issues = "https://github.com/animica-labs/animica/issues"
Documentation = "https://github.com/animica-labs/animica/tree/main/studio-services"

[tool.hatch.build.targets.wheel]
packages = ["studio_services"]

[tool.hatch.build]
include = [
  "studio_services/**/*.py",
  "studio-services/README.md",
  "studio-services/LICENCE-THIRD-PARTY.md",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["studio-services/tests"]
pythonpath = ["studio-services"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"] # handled by black
src = ["studio-services"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]
mypy_path = ["studio-services"]
